--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,19 +8,21 @@
     tools:context=".HomeActivity">
 
     <androidx.core.widget.NestedScrollView
-        android:id="@+id/relative"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/idCourseRV"
+            android:id="@+id/itemRV"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:spanCount="2"
+            android:layout_gravity="center_horizontal"
+            android:foregroundGravity="center_horizontal"
+            android:paddingHorizontal="@dimen/activity_horizontal_margin"
             android:paddingBottom="60dp" />
 
 
@@ -29,11 +31,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:paddingLeft="16dp"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingRight="16dp"
-        android:paddingBottom="@dimen/activity_vertical_margin">
+        android:orientation="horizontal">
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/total"
@@ -42,6 +40,8 @@
             android:layout_gravity="bottom"
             android:layout_weight="4"
             android:padding="0dp"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
             android:gravity="center"
             android:text="@string/tambah"
             android:textAllCaps="false"
