--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -18,14 +18,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+            android:paddingBottom="64dp"
             android:paddingTop="@dimen/activity_vertical_margin">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/idCourseRV"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingTop="8dp" />
+                android:paddingTop="8dp"
+                android:paddingBottom="64dp"/>
 
         </LinearLayout>
 
@@ -33,11 +34,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin">
+        android:layout_height="match_parent">
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/cardView"
@@ -46,10 +43,10 @@
             android:layout_height="wrap_content"
             android:gravity="bottom"
             android:layout_gravity="bottom"
-            android:layout_margin="8dp"
+            android:layout_margin="16dp"
             android:layout_marginBottom="8dp"
             app:cardCornerRadius="16dp"
-            app:cardElevation="18dp">
+            app:cardElevation="10dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -59,9 +56,19 @@
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:layout_marginStart="16dp"
                     android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/saldo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:padding="@dimen/activity_vertical_margin"
+                        android:text="Saldo"
+                        android:textColor="@color/black" />
 
                     <TextView
                         android:id="@+id/subtotal"
@@ -93,6 +100,16 @@
                         android:text="Total"
                         android:textColor="@color/black" />
 
+                    <TextView
+                        android:id="@+id/kembali"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:padding="@dimen/activity_vertical_margin"
+                        android:text="Kembali"
+                        android:textColor="@color/black" />
+
 
                 </LinearLayout>
 
@@ -102,6 +119,20 @@
                     android:layout_marginEnd="16dp"
                     android:layout_weight="1"
                     android:orientation="vertical">
+
+                    <EditText
+                        android:id="@+id/vsaldo"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:padding="@dimen/activity_vertical_margin"
+                        android:text=""
+                        android:textSize="14sp"
+                        android:textStyle="bold"
+                        android:textAlignment="textEnd"
+                        android:inputType="number"
+                        app:backgroundTint="@color/colorPrimary"
+                        android:textColor="@color/black" />
 
                     <TextView
                         android:id="@+id/vsubtotal"
@@ -127,6 +158,17 @@
 
                     <TextView
                         android:id="@+id/vtotal"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:padding="@dimen/activity_vertical_margin"
+                        android:textStyle="bold"
+                        android:text=""
+                        android:textAlignment="textEnd"
+                        android:textColor="@color/black" />
+
+                    <TextView
+                        android:id="@+id/vkembali"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="1"
