--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -29,7 +29,6 @@
                 android:paddingBottom="64dp"/>
 
         </LinearLayout>
-
     </androidx.core.widget.NestedScrollView>
 
     <LinearLayout
@@ -177,21 +176,17 @@
                         android:text=""
                         android:textAlignment="textEnd"
                         android:textColor="@color/black" />
-
-
                 </LinearLayout>
 
-
             </LinearLayout>
-
             <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                 android:id="@+id/checkout"
                 android:layout_width="match_parent"
-                android:layout_height="42dp"
+                android:layout_height="40dp"
                 android:layout_gravity="bottom"
-                android:layout_weight="4"
-                android:gravity="center_horizontal"
+                android:gravity="center"
                 android:layout_margin="16dp"
+                android:padding="0dp"
                 android:text="Checkout"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
@@ -199,8 +194,6 @@
                 app:backgroundTint="@color/colorPrimary" />
 
         </com.google.android.material.card.MaterialCardView>
-
-
 
     </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
