--- a/app/src/main/res/layout/payment_recycler.xml
+++ b/app/src/main/res/layout/payment_recycler.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="16dp"
-    android:layout_marginBottom="16dp"
+    android:layout_marginTop="16dp"
+    app:cardPreventCornerOverlap="true"
     app:cardCornerRadius="8dp"
     app:cardElevation="10dp">
 
@@ -100,5 +101,4 @@
                 android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
-
 </com.google.android.material.card.MaterialCardView>
