--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,8 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:gravity="center"
         android:layout_marginBottom="64dp"
+        android:gravity="center"
         android:orientation="vertical">
 
         <ImageView
@@ -33,8 +33,11 @@
             android:layout_marginBottom="32dp"
             android:hint="Username"
             android:textColorHint="@color/white"
-            app:hintTextColor="@color/white"
             app:boxStrokeColor="@drawable/line_selector"
+            app:boxStrokeErrorColor="@android:color/holo_red_light"
+            app:errorIconTint="@android:color/holo_red_light"
+            app:errorTextColor="@android:color/holo_red_light"
+            app:hintTextColor="@color/white"
             app:startIconDrawable="@drawable/person_outline"
             app:startIconTint="@color/white">
 
@@ -52,16 +55,20 @@
             android:id="@+id/et_passwordSignin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="32dp"
+            android:layout_marginBottom="24dp"
             android:hint="Password"
             android:imeActionId="6"
             android:imeOptions="actionDone"
-            android:maxLines="1"
-            app:hintTextColor="@color/white"
             android:singleLine="true"
             android:textColorHint="@color/white"
             app:boxBackgroundColor="@android:color/transparent"
             app:boxStrokeColor="@drawable/line_selector"
+            app:boxStrokeErrorColor="@android:color/holo_red_light"
+            app:errorIconTint="@android:color/holo_red_light"
+            app:errorTextColor="@android:color/holo_red_light"
+            app:hintTextColor="@color/white"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@color/white"
             app:startIconDrawable="@drawable/lock_closed_outline"
             app:startIconTint="@color/white">
 
@@ -78,7 +85,30 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/error"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:backgroundTint="#FFDBE3"
+                android:paddingVertical="16dp"
+                android:visibility="gone"
+                app:cardCornerRadius="12dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:lineHeight="20dp"
+                    android:paddingHorizontal="16dp"
+                    android:paddingVertical="12dp"
+                    android:text="Incorrect username or password"
+                    android:textColor="@android:color/holo_red_dark"
+                    tools:targetApi="p" />
+            </com.google.android.material.card.MaterialCardView>
 
             <Button
                 android:id="@+id/button_signinSignin"
@@ -107,7 +137,7 @@
                 style="@style/Widget.MaterialComponents.Button.TextButton"
                 android:layout_width="wrap_content"
                 android:layout_height="42dp"
-                android:text="Sign Up Now !"
+                android:text="Sign Up Now!"
                 android:textAllCaps="false"
                 android:textColor="#00D5FF" />
         </LinearLayout>
